# security4embedded

./: CMakeLists.txt  README.md
.github/: copilot-instructions.md
.github/agents/: embedded-security-module.agent.md
.github/prompts/: add-algorithm-capability.prompt.md
examples/: validation_demo.cpp
include/security/api/: crypto_module.hpp  export.hpp
include/security/core/: crypto_provider.hpp  crypto_types.hpp  provider_factory.hpp
src/: module.cpp
src/core/: error_utils.hpp  exclusive_provider.hpp  provider_factory.cpp
src/providers/openssl/: openssl_factory.cpp  openssl_factory.hpp  openssl_helpers.hpp  openssl_provider.cpp  openssl_provider.hpp
